--- a/www/index.html
+++ b/www/index.html
@@ -35,12 +35,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/auth/auth_ctrl.js"></script>
 
-    
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="TodoCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
