--- a/www/index.html
+++ b/www/index.html
@@ -32,12 +32,16 @@
     <!-- Angular Translate -->
     <script src="lib/angular-translate/angular-translate.js"></script>
 
-
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
 
+    <!-- services -->
+    <script src="services/index.js"></script>
+    <script src="services/config.js"></script>
+    
   </head>
-  <body ng-app="starter" ng-controller="TodoCtrl">
+  <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
